--- a/app/partials/Personal/ShipmentDetails.html
+++ b/app/partials/Personal/ShipmentDetails.html
@@ -10,8 +10,7 @@
 					<h2 class="title pull-left">Statistics</h2>
 					<div class="actions panel_actions pull-right">
 						<i class="box_toggle material-icons">expand_more</i>
-						<i class="box_setting material-icons" ng-click="section_modal()">mode_edit</i>
-						<i class="box_close material-icons">close</i>
+						
 					</div>
 				</header>
 				<div class="content-body padding-bottom-0">
@@ -101,17 +100,15 @@
 
 								<div class="content-body padding-bottom-0">
 									<div class="row">
-
-										<div class="col-md-9 col-md-9 col-sm-12 col-xs-12">
-
-
-											<input type="text" ng-model="search" class="form-control" placeholder="Search"> 
+										<input type="text" ng-model="search" class="form-control" placeholder="Search">
+										
+										<div class="col-md-9 col-sm-12 col-xs-12">
 
 											</div>
 											<div class="clearfix"/>
 											<br>
 											
-												<div class="col-lg-3 col-md-3 col-xs-12 col-sm-6">
+												<div class="col-lg-4 col-md-3 col-xs-12 col-sm-6">
 												<div class="btn-group margin-bottom-10 margin-right-15" style="float:left">
 													<label class="btn btn-primary" ng-click="FilterAll()" >All</label>
 													<label class="btn btn-warning" ng-click="FilterRushOrder()"  >Rush Order</label>
@@ -120,16 +117,15 @@
 												</div>
 												
 
-												<div class="col-lg-3 col-md-3 col-xs-12 col-sm-6">
-													<select class="form-control input-lg ">
-														<option>Choose Plant Filter</option>
+												<div class="col-lg-4 col-md-3 col-xs-12 col-sm-6">
+													<select class="form-control input-lg" ng-model="plantSearch" >
+													<option value="">Choose Plant For Filter</option>
 														<option>JW64</option>
 														<option>JW71</option>
-														
 													</select>
 												</div>
 												
-												<div class="col-lg-3 col-md-3 col-xs-12 col-sm-6">
+												<div class="col-lg-4 col-md-3 col-xs-12 col-sm-6">
 												<div class="btn-group margin-bottom-10" style="float:right" >
 													<label class="btn btn-primary" ng-click="FilterAllStatus()" >All</label>
 													<label class="btn btn-success" ng-click="FilterOnlySent()"  >Sent</label>
@@ -245,7 +241,7 @@
 
 
 															<tbody>
-																<tr    dir-paginate="x in truckStockList | filter:search | filter:{ Entry5 : filterRush } | filter:{ Entry6 : filterStatus } |itemsPerPage:10  "  data-user-id="{{x.Entry1}}">
+																<tr    dir-paginate="x in truckStockList | filter:search | filter:plantSearch | filter:{ Entry5 : filterRush } | filter:{ Entry6 : filterStatus } |itemsPerPage:10  "  data-user-id="{{x.Entry1}}">
 																	<td>{{ x.Entry1 }}</td>
 																	<!-- <td>{{ x.Entry2 }}</td> -->
 																	<td>{{ x.Entry3 }}</td>
