--- a/app/partials/components/nav.html
+++ b/app/partials/components/nav.html
@@ -224,7 +224,7 @@
                             <ul class="wraplist wraplist-sub sub-menu dk" >
                     						
                                 <li ui-sref-active="active">
-                                    <a ui-sref="app.tables.salesOrderStatus">...</a>
+                                    <a ui-sref="app.tables.LoadInboundDetails">Details</a>
                                 </li>
                             </ul>
     </li>
