--- a/app/partials/Personal/PriceValidation.html
+++ b/app/partials/Personal/PriceValidation.html
@@ -112,7 +112,7 @@
 									<td>{{ x.Entry4 }}</td>
 									<td>{{ x.Entry8 }}</td>
 									<td>{{ x.Entry7 }}</td>
-									<td><span ng-class="{3 : 'label label-danger', 2 : 'label label-success' } [x.Entry16] " >{{ x.Entry16 == 3 ? "Not Synced" : "Synced" }}</span></td>
+									<td><span ng-class="{3 : 'label label-danger', 2 : 'label label-success' } [x.Entry16] " >{{ x.Entry16 == 3 ? "Not Match" : "Match" }}</span></td>
                                 </tr>
 								
 												<tr>
