--- a/app/partials/components/nav.html
+++ b/app/partials/components/nav.html
@@ -54,9 +54,11 @@
                                         <li ui-sref-active="active">
                                     <a ui-sref="app.tables.pricingPreviousDay">Previous Day (SAP-MySQL)</a>
                                 </li>
+								<!--
 								<li ui-sref-active="active">
                                     <a ui-sref="app.tables.pricingBolton">Compare With Bolton</a>
                                 </li>
+								-->
 								
 								<li ui-sref-active="active">
                                     <a ui-sref="app.tables.priceValidation">Price Validation</a>
@@ -101,6 +103,20 @@
                                 </li>
 								
 								-->
+								
+								<li ui-sref-active="active">
+                                    <a>MD Equipments<span class="arrow material-icons">keyboard_arrow_right</span></a>
+                                    <ul class="wraplist wraplist-sub sub-menu dk" >
+
+                                        <li ui-sref-active="active">
+                                            <a ui-sref="app.tables.equipment" >Daily</a>
+                                        </li>
+                                        <li ui-sref-active="active">
+                                    <a ui-sref="app.tables.EquipmentPreviousDay">Previous Day</a>
+                                </li>
+                                    </ul>
+                                </li>
+								
 								
 								<li ui-sref-active="active">
                                             <a ui-sref="app.tables.md2" >Compare MySQL & Bolton</a>
