--- a/app/partials/Personal/SOStatus.html
+++ b/app/partials/Personal/SOStatus.html
@@ -1,26 +1,26 @@
 <div class='content-wrapper' ng-init="app.settings.pagetitle = 'Sales Order';">
-    <div class="col-lg-12" ng-controller="DataTablesCtrl">
-        
-					
-					
-					
-					
-    
-	
+	<div class="col-lg-12" ng-controller="DataTablesCtrl" ng-init='load()' >
 
-	
-	<div class="col-lg-12">
-        <section class="box ">
-		
-            <header class="panel_header">
-                <h2 class="title pull-left">Sales Order</h2>
-                <div class="actions panel_actions pull-right">
-                    <i class="box_toggle material-icons">expand_more</i>
-                    <i class="box_setting material-icons" ng-click="section_modal()">mode_edit</i>
-                    <i class="box_close material-icons">close</i>
-                </div>
-            </header>
-            <!--
+
+
+
+
+
+
+
+
+		<div class="col-lg-12">
+			<section class="box ">
+
+				<header class="panel_header">
+					<h2 class="title pull-left">Sales Order</h2>
+					<div class="actions panel_actions pull-right">
+						<i class="box_toggle material-icons">expand_more</i>
+						<i class="box_setting material-icons" ng-click="section_modal()">mode_edit</i>
+						<i class="box_close material-icons">close</i>
+					</div>
+				</header>
+				<!--
 			<div class="content-body">
                 <div class="row">
                     <div class="col-md-8 col-sm-12 col-xs-12 col-md-offset-2" ng-controller="DataTablesCtrl">
@@ -41,42 +41,180 @@
                 </div>
             </div>
 			-->
-			<div class="content-body">
-                <div class="row">
-                    <div class="input-group" inputgroup>
-                            <select ng-model="selectedSystem" class="form-control input-lg ">
-                                <option>Select Bolton</option>
-                                <option>Ebest</option>
-                                <option>Super Daiwa</option>
-                                <option>EOS</option>
+				<div class="content-body">
+					<div class="row">
+					
+					
+					<!--
+						<div class="input-group" inputgroup>
+							<select ng-model="selectedSystem" class="form-control input-lg ">
+								<option>Select Bolton</option>
+								<option>Ebest</option>
+								<option>SUPERDAIWA</option>
+								<option>EOS</option>
 								<option>NEOS</option>
 								<option>Manual</option>
-                            </select>
+							</select>
+						</div>
+						
+						-->
+
+						<label class="form-label" for="field-1">Select Date</label>
+							<div style="width:10%" class="input-group" >
+
+								<input type="text" class="form-control datepicker" max-date="maxDate" datepicker-popup="yyyy/MM/dd" ng-model="dt" is-open="dtpick.opened"  ng-required="true" close-text="Close" ng-click="open($event,'opened')" 
+								ng-change="getMonth()" />
+								<span class="input-group-addon" ng-click="open($event,'opened')">
+									<i class="fa fa-calendar" style="color: #999;"/>
+								</span>
+							</div>
+						
+						
+
+						<!-- <input type="date" ng-model="DeliveryDate" style="height:25px" /> -->
+						
+						<br/>
+
+
+
+					</div>
+					<div class="clearfix"/>
+					
+					
+					
+
+
+					<div  class="col-md-6  col-md-offset-3"  >
+						<canvas id="doughnut" class="chart chart-doughnut" chart-data="data" chart-labels="labels" 
+					 ng-if="showChart" chart-options="myOptions" chart-legend="true"  />
+					 
+					 <br></br>
+					
+					
+					 
+					</div>
+					
+					
+					<div class="col-md-12 col-sm-12 col-xs-12">
+					
+						<div class="col-lg-4 col-md-3 col-xs-12 col-sm-6">
+                         <input id="filter" type="text" class="form-control" placeholder="Search" ng-model="filterText" />
+						</div>
+						<!-- <input type="text" ng-model="search" class="form-control" placeholder="Search"> -->
+						
+						<div class="col-lg-4 col-md-3 col-xs-12 col-sm-6">
+													<select class="form-control input-lg" ng-model="typeSearch" >
+													<option value="">Choose MD Type For Filter</option>
+														<option>Ebest</option>
+														<option>SUPERDAIWA</option>
+														<option>EOS</option>
+														<option>NEOS</option>
+														<option>Manual</option>
+													</select>
+												</div>
+						
+						
+						
+						<div class="col-lg-4 col-md-3 col-xs-12 col-sm-6">
+                       <label class="btn btn-primary" ng-click="FilterAll()" >All</label>
+                       <label class="btn btn-success" ng-click="FilterOnlySynced()"  >Synced</label>
+                       <label class="btn btn-danger" ng-click="FilterOnlyNotSynced()" >Not Synced</label>
                     </div>
-					
-					<input type="date" ng-model="DeliveryDate" style="height:25px" />
+						
+					</div>
+
 					<br></br>
-					<button class="btn btn-primary btn-sm" ng-click="postMessage()"   >Call Web Service</button>
-					<br></br>
 					<br></br>
 					
 					
-                </div>
-				<div class="clearfix"></div>
-				
-				
-                    <div  class="col-md-6  col-md-offset-3"  >
-                     <canvas id="doughnut" class="chart chart-doughnut" chart-data="data" chart-labels="labels" 
-					 ng-if="showChart" chart-options="myOptions" chart-legend="true"  ></canvas>
-                    </div>
-                
-				
-				
-				<div style="text-align:-webkit-center">
-				
-				
-				
-				
+					
+					<div style="text-align:-webkit-center">
+
+						<table class="table table-striped" data-filter="#filter" class="table table-striped">
+							<thead>
+								<tr>
+									<th data-toggle="true">
+                                        Source
+									</th>
+									<th>
+                                        SO Number
+									</th>
+									<th >
+                                        Delivery Date
+									</th>
+									<th >
+                                        Sold To
+									</th>
+									<th >
+                                        Ship To
+									</th>
+									<th >
+                                        Status
+									</th>
+
+
+
+
+
+								</tr>
+							</thead>
+
+							<tbody>
+								<tr dir-paginate="x in recordsOfToday | filter : filterText | itemsPerPage:10  ">
+									<td>{{ x.Entry14 }}</td>
+									<td>{{ x.Entry13 }}</td>
+									<td>{{ x.Entry4 }}</td>
+									<td>{{ x.Entry7 }}</td>
+									<td>{{ x.Entry6 }}</td>
+
+									<td>
+										<span ng-class="{0 : 'label label-success', 1 : 'label label-warning' , 2 : 'label label-success' , 
+											3 : 'label label-danger' , 4 : 'label label-success' , 5 : 'label label-danger' , 6 : 'label label-success' } [x.Entry8] " >
+										{{  x.Entry8 == 0 ? "Created In Bolton" : 
+											x.Entry8 == 1 ? "In Progress" :
+											x.Entry8 == 2 ? "Sent To SAP" :
+											x.Entry8 == 3 ? "Error-Sent To SAP" :
+											x.Entry8 == 4 ? "Processed" :
+											x.Entry8 == 5 ? "Not Processed" :
+											"Idoc Released" 
+										}}
+										</td>
+
+										<!--
+														<td>{{ x.Entry8 | date }}</td> -->
+
+
+
+
+
+
+
+									</tr>
+									<tr >
+										<td ng-show="recordsOfToday.length == 0" colspan="20" style="text-align:center">
+														   No Data             
+										</td>
+									</tr>
+
+								</tbody>
+
+
+							</table>
+
+							<div>
+								<dir-pagination-controls
+							   max-size="10"
+							   direction-links="true"
+							   boundary-links="true"
+								 >
+								</dir-pagination-controls>
+
+							</div>
+
+
+
+
+							<!--
 				<table class="table table-striped" ui-jq="footable" data-filter="#filter" data-page-size="10" class="table table-striped">
                             <thead>
                                 <tr>
@@ -135,111 +273,33 @@
                                 </tr>
                             </tfoot>
                         </table>
-						
-						<!--
-						<table class="table table-striped" data-page-size="10" class="table table-striped">
-                            <thead>
-                                <tr>
-                                    <th data-toggle="true">
-                                        Source
-                                    </th>
-									<th data-toggle="true">
-                                        SO Number
-                                    </th>
-									<th >
-                                        1
-                                    </th>
-                                    <th>
-                                        2
-                                    </th>
-                                    <th >
-                                        3
-                                    </th>
-									<th >
-                                        4
-                                    </th>
-									<th >
-                                        5
-                                    </th>
-									
-                                    <th >
-                                        6
-                                    </th>
-									<th >
-                                        7
-                                    </th>
-                                </tr>
-                            </thead>
-							
-                            
-							<tbody>
-                                <tr  ng-repeat="x in recordsOfToday " >
-                                    <td>{{ x.Entry9 }}</td>
-									<td>{{ x.Entry7 }}</td>
-									<td><span ng-class="{'false' : 'label label-danger', 'true' : 'label label-success' } [x.Entry8>=1] " >{{ x.Entry8 >= 1 ? "Passed" : "Problem" }}</span>
-									</td>
-									<td><span ng-class="{'false' : 'label label-danger', 'true' : 'label label-success' } [x.Entry8>=2] " >{{ x.Entry8 >= 2 ? "Passed" : "Problem" }}</span>
-									</td>
-									
-									<td><span ng-class="{'false' : 'label label-danger', 'true' : 'label label-success' } [x.Entry8>=3] " >{{ x.Entry8 >= 3 ? "Passed" : "Problem" }}</span>
-									</td>
-									
-									<td><span ng-class="{'false' : 'label label-danger', 'true' : 'label label-success' } [x.Entry8>=4] " >{{ x.Entry8 >= 4 ? "Passed" : "Problem" }}</span>
-									</td>
-									
-									<td><span ng-class="{'false' : 'label label-danger', 'true' : 'label label-success' } [x.Entry8>=5] " >{{ x.Entry8 >= 5 ? "Passed" : "Problem" }}</span>
-									</td>
-									
-									<td><span ng-class="{'false' : 'label label-danger', 'true' : 'label label-success' } [x.Entry8>=6] " >{{ x.Entry8 >= 6 ? "Passed" : "Problem" }}</span>
-									</td>
-									
-									<td><span ng-class="{'false' : 'label label-danger', 'true' : 'label label-success' } [x.Entry8>=7] " >{{ x.Entry8 >= 7 ? "Passed" : "Problem" }}</span>
-									</td>
-									
-									
-									
-
-									
-                                </tr>
-                                </tr>
-                                
-                            </tbody>
-							
-                            <tfoot class="hide-if-no-paging">
-                                <tr>
-                                    <td colspan="10" class="text-center">
-                                        <ul class="pagination"></ul>
-                                    </td>
-                                </tr>
-                            </tfoot>
-                        </table>
-						
 						-->
-				
-				
-				</div>
-				<div class="clearfix"></div>
-				<div class="clearfix"></div>
-				<div class="clearfix"></div>
-				<div class="clearfix"></div>
-				
-				
-            </div>
-			
-                
-            
-			
-			
-			
-			
-        </section>
-    </div>
-	
-	
-	
-					
-					
-                    
-             
-</div>
-</div>	
+
+
+
+						</div>
+						<div class="clearfix"/>
+						<div class="clearfix"/>
+						<div class="clearfix"/>
+						<div class="clearfix"/>
+
+
+					</div>
+
+
+
+
+
+
+
+				</section>
+			</div>
+
+
+
+
+
+
+
+		</div>
+	</div>	
