--- a/app/partials/Personal/PricingMD.html
+++ b/app/partials/Personal/PricingMD.html
@@ -183,7 +183,11 @@
 
 									
                                 </tr>
-                                </tr>
+                                <tr >
+										<td ng-show="mdRecordsArray.length == 0" colspan="20" style="text-align:center">
+														   No Data             
+										</td>
+									</tr>
                                 
                             </tbody>
 							
