--- a/app/partials/Personal/MasterDataMaterialBolton.html
+++ b/app/partials/Personal/MasterDataMaterialBolton.html
@@ -47,20 +47,20 @@
 						
 						<div class="col-lg-4 col-md-3 col-xs-12 col-sm-6">
 													<select class="form-control input-lg" ng-model="typeSearch" >
-													<option value="">Choose MD Type For Filter</option>
-														<option>Pricing</option>
-														<option>Material</option>
-														<option>Customer</option>
+													<option value="">All</option>
+														<option >Pricing</option>
+														<option >Material</option>
+														<option >Customer</option>
 													</select>
-												</div>
+						</div>
 						
 						
 						
-						<div class="col-lg-4 col-md-3 col-xs-12 col-sm-6">
+					<div class="col-lg-4 col-md-3 col-xs-12 col-sm-6">
                        <label class="btn btn-primary" ng-click="FilterAll()" >All</label>
                        <label class="btn btn-success" ng-click="FilterOnlySynced()"  >Synced</label>
                        <label class="btn btn-danger" ng-click="FilterOnlyNotSynced()" >Not Synced</label>
-                    </div>
+					</div>
 						
 					</div>
 					
