--- a/app/partials/Personal/SOStatus.html
+++ b/app/partials/Personal/SOStatus.html
@@ -104,7 +104,7 @@
 
 						<div class="col-lg-4 col-md-4 col-xs-12 col-sm-6">
 							<select class="form-control input-lg" ng-model="typeSearch" >
-								<option value="">Choose MD Type For Filter</option>
+								<option value="">All System</option>
 								<option>Ebest</option>
 								<option>SUPERDAIWA</option>
 								<option>EOS</option>
