--- a/app/partials/Personal/Settlement.html
+++ b/app/partials/Personal/Settlement.html
@@ -3,76 +3,92 @@
 
 
 
+		<div class="r4_counter wid-stats db_box" style="width:30% ;float: right"  >
+			<div class='stats-data'>
 
-		<div class="col-lg-12">
-			
-
-
-
-
-		<div class="col-lg-12">
-			<section class="box ">
-				<header class="panel_header">
-					<h2 class="title pull-left">Settlement</h2>
-					<div class="actions panel_actions pull-right">
-						<i class="box_toggle material-icons">expand_more</i>
-
-					</div>
-				</header>
+				<i ng-class="{ true : 'material-icons icon-danger pull-left' , false : 'material-icons icon-success pull-left' } [HokanFilesCount>1] "  >{{  (HokanFilesCount>1) ? "report_problem" : "check circle" }}</i>
 				
-				
-				
-				<div class="content-body padding-bottom-15">
-					<div class="row">
+				<div class="stats">
+					<h3>{{HokanFilesCount}} files</h3>
+					<span> Not Received From Hokan</span>
 					
-					
-					<label class="form-label" for="field-1">Select Date</label>
-                            <div style="width:10%" class="input-group" >
-							
-                                <input type="text" class="form-control datepicker" max-date="maxDate" datepicker-popup="yyyy/MM/dd" ng-model="dt" is-open="dtpick.opened"  ng-required="true" close-text="Close" ng-click="open($event,'opened')" 
+				</div>
+				
+				
+			</div>
+		</div>
+		
+		<div class="col-lg-12">
+
+
+
+
+
+			<div class="col-lg-12">
+				<section class="box ">
+					<header class="panel_header">
+						<h2 class="title pull-left">Settlement</h2>
+						<div class="actions panel_actions pull-right">
+							<i class="box_toggle material-icons">expand_more</i>
+
+						</div>
+					</header>
+
+
+
+					<div class="content-body padding-bottom-15">
+						<div class="row">
+
+
+							<label class="form-label" for="field-1">Select Date</label>
+							<div style="width:10%" class="input-group" >
+
+								<input type="text" class="form-control datepicker" max-date="maxDate" datepicker-popup="yyyy/MM/dd" ng-model="dt" is-open="dtpick.opened"  ng-required="true" close-text="Close" ng-click="open($event,'opened')" 
 								ng-change="getdate()" />
-                                <span class="input-group-addon" ng-click="open($event,'opened')"><i class="fa fa-calendar" style="color: #999;"></i></span>
-                            </div>
-							
-							
-					
-					
-						<div class="col-md-12 col-sm-12 col-xs-12">
-
-							<div class="content-body padding-bottom-0">
-								<div class="row">
-
-									<div class="col-md-9 col-sm-12 col-xs-12">
-										
-
-										 <input type="text" ng-model="search" class="form-control" placeholder="Search"> 
-
-									</div>
-									<div class="clearfix"/>
-									<br>
-
-									<div class="btn-group margin-bottom-10 margin-right-15" style="float:left">
-										<label class="btn btn-primary" ng-click="FilterAll()" >All</label>
-										<label class="btn btn-warning" ng-click="FilterCorrection()"  >Corrected</label>
-										<label class="btn btn-success" ng-click="FilterNoCorrection()" >Not Corrected</label>
-									</div>
-									
-									<div class="btn-group margin-bottom-10" style="float:right" >
-										<label class="btn btn-primary" ng-click="FilterAllStatus()" >All</label>
-										<label class="btn btn-success" ng-click="FilterSuccess()"  >Successful</label>
-										<label class="btn btn-danger" ng-click="FilterError()" >Error</label>
-									</div>
+								<span class="input-group-addon" ng-click="open($event,'opened')">
+									<i class="fa fa-calendar" style="color: #999;"/>
+								</span>
+							</div>
 
 
-									<div class="clearfix"/>
-									<br>
 
-										<a class="btn btn-circle btn-lg pull-right btn-success" ng-click="exportData()" >CSV    <i class='fa fa-file-excel-o icon-4x' />
-										</a>
 
-										<div class="col-md-12 col-sm-12 col-xs-12 table-responsive">
+							<div class="col-md-12 col-sm-12 col-xs-12">
 
-											<!--
+								<div class="content-body padding-bottom-0">
+									<div class="row">
+
+										<div class="col-md-9 col-sm-12 col-xs-12">
+
+
+											<input type="text" ng-model="search" class="form-control" placeholder="Search"> 
+
+											</div>
+											<div class="clearfix"/>
+											<br>
+
+												<div class="btn-group margin-bottom-10 margin-right-15" style="float:left">
+													<label class="btn btn-primary" ng-click="FilterAll()" >All</label>
+													<label class="btn btn-warning" ng-click="FilterCorrection()"  >Corrected</label>
+													<label class="btn btn-success" ng-click="FilterNoCorrection()" >Not Corrected</label>
+												</div>
+
+												<div class="btn-group margin-bottom-10" style="float:right" >
+													<label class="btn btn-primary" ng-click="FilterAllStatus()" >All</label>
+													<label class="btn btn-success" ng-click="FilterSuccess()"  >Successful</label>
+													<label class="btn btn-danger" ng-click="FilterError()" >Error</label>
+												</div>
+
+
+												<div class="clearfix"/>
+												<br>
+
+													<a class="btn btn-circle btn-lg pull-right btn-success" ng-click="exportData()" >CSV    <i class='fa fa-file-excel-o icon-4x' />
+													</a>
+
+													<div class="col-md-12 col-sm-12 col-xs-12 table-responsive">
+
+														<!--
 						<table class="table table-striped" ui-jq="footable" data-filter="#filter" data-page-size="10" class="table table-striped">
                             <thead>
                                 <tr>
@@ -115,107 +131,107 @@
                         </table>
 						-->
 
-											<table class="table table-striped" data-filter="#filter" class="table table-striped">
-												<thead>
-													<tr>
-														<th data-toggle="true">
+														<table class="table table-striped" data-filter="#filter" class="table table-striped">
+															<thead>
+																<tr>
+																	<th data-toggle="true">
                                         Name
-														</th>
-														<th>
+																	</th>
+																	<th>
                                         Route
-														</th>
-														<th >
+																	</th>
+																	<th >
                                         Plant
-														</th>
-														<th >
+																	</th>
+																	<th >
                                         Date
-														</th>
-														<th >
+																	</th>
+																	<th >
                                         FileName
-														</th>
-														<th >
+																	</th>
+																	<th >
                                         Status
-														</th>
-														<th >
+																	</th>
+																	<th >
                                         Correction
-														</th>
-														
-														
-														
-														
-													</tr>
-												</thead>
+																	</th>
 
-												<tbody>
-													<tr    dir-paginate="x in SettlementList | filter:search | filter:{ Entry10 : filterCorrection } |itemsPerPage:10  "  data-user-id="{{x.Entry1}}">
-														<td>{{ x.Entry1 }}</td>
-														<td>{{ x.Entry2 }}</td>
-														<td>{{ x.Entry3 }}</td>
-														<td>{{ x.Entry4 }}</td>
-														<td>{{ x.Entry11 }}</td>
 
-														<td>
-															<span ng-class="{'1' : 'label label-danger', '2' : 'label label-success' , 
+
+
+																</tr>
+															</thead>
+
+															<tbody>
+																<tr    dir-paginate="x in SettlementList | filter:search | filter:{ Entry10 : filterCorrection } |itemsPerPage:10  "  data-user-id="{{x.Entry1}}">
+																	<td>{{ x.Entry1 }}</td>
+																	<td>{{ x.Entry2 }}</td>
+																	<td>{{ x.Entry3 }}</td>
+																	<td>{{ x.Entry4 }}</td>
+																	<td>{{ x.Entry11 }}</td>
+
+																	<td>
+																		<span ng-class="{'1' : 'label label-danger', '2' : 'label label-success' , 
 															'3' : 'label label-danger' , '4' : 'label label-success'} [x.Entry8] " >
 														{{ (x.Entry8=='1') ? "Boomi Error" : 
 														   (x.Entry8=='2') ? "Idoc Sent" :
 														   (x.Entry8=='3') ? "SAP Error" :
 														   "Processed"
 														   }}
-														</td>
-														<td>
-															<span ng-class="{ true : 'label label-warning' } [x.Entry10==1] " >
+																		</td>
+																		<td>
+																			<span ng-class="{ true : 'label label-warning' } [x.Entry10==1] " >
 														{{ (x.Entry10==1) ? "Corrected" : "--" }}
-														</td>
-														<!--
+																			</td>
+																			<!--
 														<td>{{ x.Entry8 | date }}</td> -->
-														
-														
-														
-													
-														 
 
-													
-												</tr>
-												<tr >
-													<td ng-show="SettlementList.length == 0" colspan="20" style="text-align:center">
+
+
+
+
+
+
+																		</tr>
+																		<tr >
+																			<td ng-show="SettlementList.length == 0" colspan="20" style="text-align:center">
 														   No Data             
-													</td>
-												</tr>
+																			</td>
+																		</tr>
 
-											</tbody>
+																	</tbody>
 
 
-										</table>
+																</table>
 
-										<div>
-											<dir-pagination-controls
+																<div>
+																	<dir-pagination-controls
 							   max-size="10"
 							   direction-links="true"
 							   boundary-links="true"
 								 >
-											</dir-pagination-controls>
+																	</dir-pagination-controls>
 
+																</div>
+															</div>
+
+
+
+														</div>    
+													</div>
+
+
+
+												</div>
+											</div>
 										</div>
-									</div>
-
-								
-									
-								</div>    
+									</section>
+								</div>
 							</div>
-
-
-
 						</div>
+
+
+
+
 					</div>
-				</div>
-			</section>
-		</div>
-	</div>
-</div>
-
-
-
-
-</div>
-</div>	
+				</div>	
