--- a/app/partials/Personal/LoadInbound.html
+++ b/app/partials/Personal/LoadInbound.html
@@ -2,7 +2,20 @@
 	<div class="col-lg-12" ng-controller="LoadInboundController" ng-init='load()' >
 
 
+		<div class="r4_counter wid-stats db_box" style="width:30% ;float: right"  >
+			<div class='stats-data'>
 
+				<i ng-class="{ true : 'material-icons icon-danger pull-left' , false : 'material-icons icon-success pull-left' } [HokanFilesCount>1] "  >{{  (HokanFilesCount>1) ? "report_problem" : "check circle" }}</i>
+
+				<div class="stats">
+					<h3>{{HokanFilesCount}} files</h3>
+					<span> Not Received From Hokan</span>
+
+				</div>
+
+
+			</div>
+		</div>
 
 		<div class="col-lg-12">
 
